[package]
name = "edu-rust-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
